--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -161,14 +161,20 @@
     <Compile Include="Monads\List.cs" />
     <Compile Include="Monads\Maybe.cs" />
     <Compile Include="ObjectExtensions\EventHandlerExtensions.cs" />
+    <Compile Include="Collections\Cache.cs" />
     <Compile Include="Reflection\ClassFactory.cs" />
+    <Compile Include="Collections\Empty.cs" />
     <Compile Include="Reflection\ExpressionVisitor.cs" />
+    <Compile Include="Reflection\ExtensionsForReflection.cs" />
     <Compile Include="Reflection\FastCollection.cs" />
     <Compile Include="Reflection\FastCollectionProperty.cs" />
     <Compile Include="Reflection\Generic.cs" />
+    <Compile Include="Reflection\IMethodCall.cs" />
     <Compile Include="Reflection\InstanceFactory.cs" />
     <Compile Include="Reflection\MethodCache.cs" />
+    <Compile Include="Reflection\MethodCallCache.cs" />
     <Compile Include="Reflection\ReflectiveVisitorBase.cs" />
+    <Compile Include="Reflection\MethodCallTypeCache.cs" />
     <Compile Include="Reflection\TypeInstanceFactory.cs" />
     <Compile Include="Security\SecureSessionHttpModule.cs" />
     <Compile Include="StateMachine\Activity.cs" />
