--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -101,7 +101,9 @@
     <Compile Include="Metrics\Counter_Specs.cs" />
     <Compile Include="Monads\Parser_Specs.cs" />
     <Compile Include="Monads\TypeParser_Specs.cs" />
+    <Compile Include="Reflection\ExtensionsToGenericTypes.cs" />
     <Compile Include="Reflection\GenericMethodInvoker_Specs.cs" />
+    <Compile Include="Reflection\GenericTypeReflection_Specs.cs" />
     <Compile Include="Reflection\Generic_AdditionalSpecs.cs" />
     <Compile Include="Reflection\ObjectBuilder_Specs.cs" />
     <Compile Include="StateMachine\FileImportWorkflow.cs" />
