--- a/src/Magnum.MapReduce.Specs/Magnum.MapReduce.Specs.csproj
+++ b/src/Magnum.MapReduce.Specs/Magnum.MapReduce.Specs.csproj
@@ -78,7 +78,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Magnum\Magnum.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
-      <Name>Magnum.Common</Name>
+      <Name>Magnum</Name>
     </ProjectReference>
     <ProjectReference Include="..\Magnum.MapReduce\Magnum.MapReduce.csproj">
       <Project>{9EE2E9D4-1F97-47D9-BBA4-2F9B245B6D8D}</Project>
