--- a/src/Magnum.MapReduce/Magnum.MapReduce.csproj
+++ b/src/Magnum.MapReduce/Magnum.MapReduce.csproj
@@ -74,7 +74,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Magnum\Magnum.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
-      <Name>Magnum.Common</Name>
+      <Name>Magnum</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
