--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -106,6 +106,11 @@
     <Compile Include="Reflection\GenericTypeReflection_Specs.cs" />
     <Compile Include="Reflection\Generic_AdditionalSpecs.cs" />
     <Compile Include="Reflection\ObjectBuilder_Specs.cs" />
+    <Compile Include="Serialization\Parser.cs" />
+    <Compile Include="Serialization\PrimitiveType_Specs.cs" />
+    <Compile Include="Serialization\Result.cs" />
+    <Compile Include="Serialization\TestSubjects\PrimitiveClass.cs" />
+    <Compile Include="Serialization\XmlParser.cs" />
     <Compile Include="StateMachine\FileImportWorkflow.cs" />
     <Compile Include="StateMachine\StateVisualizer_Specs.cs" />
     <Compile Include="TypedKey_Specs.cs" />
