--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -182,12 +182,19 @@
     <Compile Include="Security\SecureSessionHttpModule.cs" />
     <Compile Include="StateMachine\Activity.cs" />
     <Compile Include="StateMachine\BasicEvent.cs" />
+    <Compile Include="StateMachine\BasicEventAction.cs" />
     <Compile Include="StateMachine\DataEvent.cs" />
+    <Compile Include="StateMachine\DataEventAction.cs" />
     <Compile Include="StateMachine\Event.cs" />
+    <Compile Include="StateMachine\EventAction.cs" />
+    <Compile Include="StateMachine\EventActionList.cs" />
+    <Compile Include="StateMachine\ExpressionAction.cs" />
     <Compile Include="StateMachine\IStateMachineInspector.cs" />
     <Compile Include="StateMachine\IStateMachineInspectorSite.cs" />
+    <Compile Include="StateMachine\LambdaAction.cs" />
     <Compile Include="StateMachine\State.cs" />
-    <Compile Include="StateMachine\StateEventAction.cs" />
+    <Compile Include="StateMachine\ExceptionAction.cs" />
+    <Compile Include="StateMachine\EventActionBase.cs" />
     <Compile Include="StateMachine\StateMachine.cs" />
     <Compile Include="Data\IAggregateRoot.cs" />
     <Compile Include="Data\IRepositoryFactory.cs" />
@@ -214,6 +221,7 @@
     <Compile Include="DateTimeExtensions\TimeSpanExtensions.cs" />
     <Compile Include="StateMachine\StateMachineException.cs" />
     <Compile Include="StateMachine\StateMachineInspector.cs" />
+    <Compile Include="StateMachine\TransitionToAction.cs" />
     <Compile Include="Threading\AsyncExecutor.cs" />
     <Compile Include="Threading\AsyncResult.cs" />
     <Compile Include="Threading\IAsyncExecutor.cs" />
