--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -166,6 +166,19 @@
     <Compile Include="Monads\Maybe.cs" />
     <Compile Include="ObjectExtensions\EventHandlerExtensions.cs" />
     <Compile Include="Collections\Cache.cs" />
+    <Compile Include="Pipeline\ClonePipelineVisitor.cs" />
+    <Compile Include="Pipeline\CollectionExtensions.cs" />
+    <Compile Include="Pipeline\End.cs" />
+    <Compile Include="Pipeline\Filter.cs" />
+    <Compile Include="Pipeline\Input.cs" />
+    <Compile Include="Pipeline\IPipeline.cs" />
+    <Compile Include="Pipeline\IPipelineSource.cs" />
+    <Compile Include="Pipeline\MessageConsumer.cs" />
+    <Compile Include="Pipeline\PipelineNode.cs" />
+    <Compile Include="Pipeline\PipelineType.cs" />
+    <Compile Include="Pipeline\PipelineVisitor.cs" />
+    <Compile Include="Pipeline\RecipientList.cs" />
+    <Compile Include="Pipeline\TracePipelineVisitor.cs" />
     <Compile Include="Reflection\ClassFactory.cs" />
     <Compile Include="Collections\Empty.cs" />
     <Compile Include="Reflection\ExpressionVisitor.cs" />
