Continuing to work the general pipeline structure

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -166,19 +166,20 @@
     <Compile Include="Monads\Maybe.cs" />
     <Compile Include="ObjectExtensions\EventHandlerExtensions.cs" />
     <Compile Include="Collections\Cache.cs" />
-    <Compile Include="Pipeline\ClonePipelineVisitor.cs" />
-    <Compile Include="Pipeline\CollectionExtensions.cs" />
-    <Compile Include="Pipeline\End.cs" />
-    <Compile Include="Pipeline\Filter.cs" />
-    <Compile Include="Pipeline\Input.cs" />
-    <Compile Include="Pipeline\IPipeline.cs" />
-    <Compile Include="Pipeline\IPipelineSource.cs" />
+    <Compile Include="Pipeline\Segments\MessageConsumerSegment.cs" />
+    <Compile Include="Pipeline\Visitors\ClonePipelineVisitor.cs" />
+    <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="Pipeline\Segments\EndSegment.cs" />
+    <Compile Include="Pipeline\Segments\FilterSegment.cs" />
+    <Compile Include="Pipeline\Segments\InputSegment.cs" />
+    <Compile Include="Pipeline\Pipe.cs" />
     <Compile Include="Pipeline\MessageConsumer.cs" />
-    <Compile Include="Pipeline\PipelineNode.cs" />
-    <Compile Include="Pipeline\PipelineType.cs" />
-    <Compile Include="Pipeline\PipelineVisitor.cs" />
-    <Compile Include="Pipeline\RecipientList.cs" />
-    <Compile Include="Pipeline\TracePipelineVisitor.cs" />
+    <Compile Include="Pipeline\Segments\PipeSegment.cs" />
+    <Compile Include="Pipeline\PipeSegmentType.cs" />
+    <Compile Include="Pipeline\Visitors\AbstractPipeVisitor.cs" />
+    <Compile Include="Pipeline\Segments\RecipientListSegment.cs" />
+    <Compile Include="Pipeline\Visitors\TracePipeVisitor.cs" />
+    <Compile Include="Pipeline\Unsubscriber.cs" />
     <Compile Include="Reflection\ClassFactory.cs" />
     <Compile Include="Collections\Empty.cs" />
     <Compile Include="Reflection\ExpressionVisitor.cs" />
