Working on interceptors for the pipeline

--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Monads\Parser_Specs.cs" />
     <Compile Include="Monads\TypeParser_Specs.cs" />
     <Compile Include="Pipeline\Filter_Specs.cs" />
+    <Compile Include="Pipeline\Interceptor_Specs.cs" />
     <Compile Include="Pipeline\Pipeline_Specs.cs" />
     <Compile Include="Pipeline\Throughput_Specs.cs" />
     <Compile Include="Pipeline\Trace_Specs.cs" />
