Typed pipelines for the win

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -168,10 +168,10 @@
     <Compile Include="Collections\Cache.cs" />
     <Compile Include="Pipeline\ExtensionMethods.cs" />
     <Compile Include="Pipeline\IInterceptorConfigurator.cs" />
-    <Compile Include="Pipeline\InlineBinder.cs" />
+    <Compile Include="Pipeline\InterceptionBinder.cs" />
     <Compile Include="Pipeline\ISubscriptionScope.cs" />
     <Compile Include="Pipeline\PipelineException.cs" />
-    <Compile Include="Pipeline\RecipientListBinder.cs" />
+    <Compile Include="Pipeline\SubscriptionBinder.cs" />
     <Compile Include="Pipeline\Segments\InterceptorConfigurator.cs" />
     <Compile Include="Pipeline\Segments\InterceptorSegment.cs" />
     <Compile Include="Pipeline\Segments\MessageConsumerSegment.cs" />
