Wrote tests around the Anytime() syntax in the state machine, allowing events to be hooked anytime regardless of the state.

--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Serialization\Result.cs" />
     <Compile Include="Serialization\TestSubjects\PrimitiveClass.cs" />
     <Compile Include="Serialization\XmlParser.cs" />
+    <Compile Include="StateMachine\Anytime_Specs.cs" />
     <Compile Include="StateMachine\EventException_Specs.cs" />
     <Compile Include="StateMachine\FileImportWorkflow.cs" />
     <Compile Include="StateMachine\StateVisualizer_Specs.cs" />
