Initial commit of the new state machine feature Combine, which makes combined events possible (Fork/Join pattern)

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -221,6 +221,7 @@
     <Compile Include="StateMachine\Activity.cs" />
     <Compile Include="StateMachine\BasicEvent.cs" />
     <Compile Include="StateMachine\BasicEventAction.cs" />
+    <Compile Include="StateMachine\EventCombiner.cs" />
     <Compile Include="StateMachine\DataEvent.cs" />
     <Compile Include="StateMachine\DataEventAction.cs" />
     <Compile Include="StateMachine\Event.cs" />
