Added a new MonadicCommandLineParser using a series of parser monads and elements.

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -116,6 +116,19 @@
     <Compile Include="Collections\Tuple.cs" />
     <Compile Include="Collections\Util.cs" />
     <Compile Include="CombGuid.cs" />
+    <Compile Include="CommandLineParser\ArgumentElement.cs" />
+    <Compile Include="CommandLineParser\IArgumentElement.cs" />
+    <Compile Include="CommandLineParser\ICommandLineParser.cs" />
+    <Compile Include="CommandLineParser\IDefinitionElement.cs" />
+    <Compile Include="CommandLineParser\ISwitchElement.cs" />
+    <Compile Include="CommandLineParser\ITokenElement.cs" />
+    <Compile Include="CommandLineParser\MonadicCommandLineParser.cs" />
+    <Compile Include="CommandLineParser\SwitchElement.cs" />
+    <Compile Include="CommandLineParser\DefinitionElement.cs" />
+    <Compile Include="CommandLineParser\ICommandLineElement.cs" />
+    <Compile Include="CommandLineParser\TokenElement.cs" />
+    <Compile Include="CommandLineParser\StringCommandLineParser.cs" />
+    <Compile Include="CommandLineParser\TextCommandLineParser.cs" />
     <Compile Include="CommandLine\Argument.cs" />
     <Compile Include="CommandLine\ArgumentOrderException.cs" />
     <Compile Include="CommandLine\Arguments_must_be_positional_then_named.cs" />
@@ -171,6 +184,10 @@
     <Compile Include="Monads\Identity.cs" />
     <Compile Include="Monads\List.cs" />
     <Compile Include="Monads\Maybe.cs" />
+    <Compile Include="Monads\Parser\AbstractCharacterParser.cs" />
+    <Compile Include="Monads\Parser\MonadParserExtensions.cs" />
+    <Compile Include="Monads\Parser\Parser.cs" />
+    <Compile Include="Monads\Parser\Result.cs" />
     <Compile Include="ObjectExtensions\EventHandlerExtensions.cs" />
     <Compile Include="Collections\Cache.cs" />
     <Compile Include="Pipeline\IAsyncConsumer.cs" />
