--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Cache_Specs.cs" />
     <Compile Include="Calendar\IsHoliday_Specs.cs" />
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
+    <Compile Include="CEP\MessageParser.cs" />
     <Compile Include="CEP\TimeBased_Specs.cs" />
     <Compile Include="CommandLineParser\Parser_Specs.cs" />
     <Compile Include="CommandLine\ArgumentOrderPolicy_Specs.cs" />
