--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -64,9 +64,9 @@
     <Compile Include="Cache_Specs.cs" />
     <Compile Include="Calendar\IsHoliday_Specs.cs" />
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
-    <Compile Include="CEP\MessagesToBeTestedWith.cs" />
-    <Compile Include="CEP\ObjectParser_specs.cs" />
-    <Compile Include="CEP\PossibleAttackPattern.cs" />
+    <Compile Include="EventStreamProcessing\MessagesToBeTestedWith.cs" />
+    <Compile Include="EventStreamProcessing\ObjectParser_specs.cs" />
+    <Compile Include="EventStreamProcessing\PossibleAttackPattern.cs" />
     <Compile Include="CommandLineParser\Parser_Specs.cs" />
     <Compile Include="CommandLine\ArgumentOrderPolicy_Specs.cs" />
     <Compile Include="CommandLine\ArgumentWithSameFirstLetter.cs" />
